background image not covering the whole page fix with adding white behind

--- a/css/style-home.css
+++ b/css/style-home.css
@@ -139,16 +139,28 @@ body
 /* Page 2 */
 #page2
 {
-<<<<<<< HEAD
-	background : white; 
-=======
+	background-color : white; 
 	width:100%;
 	height:100%;
+	z-index : 16;
+}
+
+#page2:after {
 	background:url(../images/background-indo.jpg); 
 	background-size:contain;
 	background-position:center;
-	background-repeat:no-repeat;
->>>>>>> b5f53fa523121dcc051e307ddcf39c611aecd1a4
+	background-repeat:no-repeat;	
+	width : 100%;
+	height : 100%;
+	
+	content : "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	top: 0;
+	z-index : -1;
+
 }
 
 .circle_button_space {		
